<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_shirt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="fitCenter"
        app:riv_border_color="@android:color/transparent"
        app:riv_border_width="2dip"
        app:riv_corner_radius="5dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <TextView
        android:id="@+id/tv_soccer_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/iv_shirt"
        android:layout_toRightOf="@+id/iv_shirt"
        android:ellipsize="end"
        android:fontFamily="@font/playfair_display_sc_regular"
        android:maxLines="1"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/iv_icon_level"
        style="@style/AppTheme.ListItemIcon"
        android:layout_below="@+id/tv_soccer_team"
        android:layout_toEndOf="@+id/iv_shirt"
        android:layout_toRightOf="@+id/iv_shirt"
        android:contentDescription="@string/ic_level_description"
        android:src="@drawable/ic_shirt" />

    <TextView
        android:id="@+id/tv_level_size_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_icon_level"
        android:layout_toEndOf="@+id/iv_icon_level"
        android:layout_toRightOf="@+id/iv_icon_level"
        android:ellipsize="end"
        android:maxLines="1" />

    <ImageView
        android:id="@+id/iv_icon_delivery"
        style="@style/AppTheme.ListItemIcon"
        android:layout_below="@+id/iv_icon_level"
        android:layout_toEndOf="@+id/iv_shirt"
        android:layout_toRightOf="@+id/iv_shirt"
        android:contentDescription="@string/ic_delivery_description"
        android:src="@drawable/ic_delivery" />

    <TextView
        android:id="@+id/tv_frete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_icon_delivery"
        android:layout_toEndOf="@+id/iv_icon_delivery"
        android:layout_toRightOf="@+id/iv_icon_delivery" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_icon_delivery"
        android:layout_toEndOf="@+id/iv_shirt"
        android:layout_toRightOf="@+id/iv_shirt" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_amount"
        android:layout_toEndOf="@+id/tv_amount"
        android:layout_toRightOf="@+id/tv_amount"
        android:textColor="@color/colorPrice" />

    <ImageView
        android:id="@+id/iv_icon_remove"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/ic_remove_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_remove"
        android:tint="@color/colorIcon" />
</RelativeLayout>